--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ocenime-backend-demo
 
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ocenime
+spring.datasource.url=jdbc:mysql://localhost:3306/ocenime?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
